test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/union_wrong_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[36]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(foo)
  =
  {
  const int(1)
  }
  ;
  union
  identifier(u)
  {
  int
  identifier(b)
  ;
  }
  ;
  return
  identifier(foo)
  .
  identifier(b)
  ;
  }
